--- a/_posts/2016-08-10-junktime.md
+++ b/_posts/2016-08-10-junktime.md
@@ -3,4 +3,4 @@ layout: post
 title: Junktime
 ---
 
-"If 'Junkspace is what remains after modernization has run its course,' then Junktime is the mess digitization has made of temporality." (<em>After Belonging</em>, Fall 2016)
+"If 'Junkspace is what remains after modernization has run its course,' then Junktime is the mess digitization has made of temporality." (After Belonging, summer 2016)
