--- a/_posts/2016-09-05-peakflow.md
+++ b/_posts/2016-09-05-peakflow.md
@@ -3,4 +3,4 @@ layout: post
 title: Peak Flow
 ---
 
-"Flow has replaced fixity as the steady state of contemporary life." \([Columbia University, seminar, fall 2016](https://courseworks2.columbia.edu/courses/11294/assignments/syllabus)\)
+"Flow has replaced fixity as the steady state of contemporary life." \(Columbia University, seminar, fall 2016 [🔗](https://courseworks2.columbia.edu/courses/11294/assignments/syllabus)\)
