--- a/_posts/2016-08-10-junktime.md
+++ b/_posts/2016-08-10-junktime.md
@@ -3,4 +3,4 @@ layout: post
 title: Junktime
 ---
 
-"If 'Junkspace is what remains after modernization has run its course,' then Junktime is the mess digitization has made of temporality." \([_After Belonging: Objects, Spaces, and Territories of the Ways We Stay in Transit_, Lars Müller Publishers, November 2016](https://www.amazon.com/After-Belonging-Objects-Territories-Transit/dp/3037785209)\) [&#128196;](https://view.publitas.com/p222-9556/troy-therrien-junktime/page/1)
+"If 'Junkspace is what remains after modernization has run its course,' then Junktime is the mess digitization has made of temporality." \([_After Belonging: Objects, Spaces, and Territories of the Ways We Stay in Transit_, Lars Müller Publishers, November 2016](https://www.amazon.com/After-Belonging-Objects-Territories-Transit/dp/3037785209) [📄](https://view.publitas.com/p222-9556/troy-therrien-junktime/page/1)\)
