--- a/_posts/2016-09-05-peakflow.md
+++ b/_posts/2016-09-05-peakflow.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Peak Flow
+category: course
 ---
 
 "Flow has replaced fixity as the steady state of contemporary life." \(Columbia University, seminar, fall 2016 [🔗](https://courseworks2.columbia.edu/courses/11294/assignments/syllabus)\)
